# pyscribe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-binaries.yml  cicd.yml
src/pyscribe/: __init__.py  __main__.py  auth.py  cli.py  errors.py  transcriber.py  utils.py
