[project]
name = "pyscribest"
version = "1.2.1"
description = "Audio transcriber powered by the ElevenLabs Scribe AI model."
authors = [{ name = "tooru", email = "tooru@tooru.mom" }]
dependencies = [
    "elevenlabs~=2.29.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["transcription", "lyrics", "elevenlabs", "audio", "cli"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[project.optional-dependencies]
keyring = [
    "keyring>=25.5",
]

[dependency-groups]
dev = [
    "basedpyright~=1.36.0",
    "ruff~=0.14.0",
    "pyscribest[keyring]",
]
bundle = [
    "pyinstaller~=6.17.0",
]

[project.urls]
Repository = "https://github.com/tooruu/pyscribe"
Issues = "https://github.com/tooruu/pyscribe/issues"

[project.scripts]
pyscribe = "pyscribe.cli:main"
pyscribest = "pyscribe.cli:main"

[build-system]
requires = ["uv-build~=0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pyscribe"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "C90",     # mccabe
    "COM812",  # missing-trailing-comma
    "D1",      # pydocstyle Missing Docstrings
    "D203",    # one-blank-line-before-class
    "D205",    # blank-line-after-summary
    "D213",    # multi-line-summary-second-line
    "E731",    # lambda-assignment
    "EM",      # flake8-errmsg
    "FBT",     # flake8-boolean-trap
    "INP",     # flake8-no-pep420
    "INT",     # flake8-gettext
    "N818",    # error-suffix-on-exception-name
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "RUF001",  # ambiguous-unicode-character-string
    "S311",    # suspicious-non-cryptographic-random-usage
    "S603",    # subprocess-without-shell-equals-true
    "S607",    # start-process-with-partial-path
    "SLF",     # flake8-self
    "T20",     # flake8-print
    "TC006",   # runtime-cast-value
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
allow-star-arg-any = true

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["json", "orjson"]

[tool.ruff.lint.pep8-naming]
ignore-names = []

[tool.basedpyright]
pythonVersion = "3.8"
pythonPlatform = "All"
reportUninitializedInstanceVariable = "none"
reportUnusedCallResult = "none"
